# rust-swagger-to-md

./: Cargo.toml  README.md  main.rs
test/: main.rs
